# usports

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  test.yml
tests/: test_basketball.py  test_data.py  test_football.py  test_ice_hockey.py  test_players_stats.py  test_soccer.py  test_team_stats.py  test_volleyball.py
usports/: __init__.py
usports/base/: __init__.py  constants.py  exceptions.py  interfaces.py  types.py
usports/basketball/: __init__.py  constants.py  player_stats.py  standings.py  team_stats.py
usports/football/: __init__.py  constants.py  player_stats.py  standings.py  team_stats.py
usports/ice_hockey/: __init__.py  constants.py  player_stats.py  standings.py  team_stats.py
usports/soccer/: __init__.py  constants.py  player_stats.py  standings.py  team_stats.py
usports/utils/: __init__.py  constants.py  helpers.py  logger.py  types.py
usports/volleyball/: __init__.py  constants.py  player_stats.py  standings.py  team_stats.py
