[project]
name = "usports"
version = "0.1.0"
description = "A python package for current USPORTS stats"
authors = [{ name = "OJ Adeyemi", email = "ojieadeyemi@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4 (>=4.13.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.2.3,<3.0.0)",
]
keywords = [
    "usports",
    "sports",
    "statistics",
    "data analysis",
    "web scraping",
    "sports analytics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Repository = "https://github.com/ojadeyemi/usports.git"
Issues = "https://github.com/ojadeyemi/usports/issues"

[tool.ruff]
line-length = 120
